attempt2 to fix expansion on ios

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2405,6 +2405,11 @@ body {
 .cid-rzNpsraWzQ .mbr-section-title {
   color: #816c96;
 }
+
+.cid-rzNpsraWzQ A {
+  color: #FFF !important;
+}
+
 .cid-rzNqxfMfWM {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -2456,6 +2461,10 @@ body {
   width: 100%;
   overflow: hidden;
 }
+.cid-rzNqxfMfWM A {
+  color: #FFF !important;
+}
+
 .cid-rzNqxfMfWM .card-img img {
   z-index: -1;
   height: 100%;
@@ -2576,11 +2585,23 @@ body {
 @media (max-width: 767px) {
     .cid-rytu9NweJT .container .carousel-control {
         margin-bottom: 0;
+        font-size: 20px;
+    line-height: 13px;
+    }
+    .cid-rytu9NweJT .mbr-section-btn .btn {
+      font-weight: 500;
+  letter-spacing: 1px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  padding: 0.6rem 1.5rem;
+  border-radius: 3px;
+
     }
 }
 .cid-rytu9NweJT .boxed-slider {
     position: relative;
-    padding: 93px 0;
+    padding: 0px 0;
 }
 .cid-rytu9NweJT .boxed-slider > div {
     position: relative;
@@ -2616,8 +2637,8 @@ body {
     left: 0;
     display: -webkit-flex;
     align-items: center;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-30%);
+    transform: translateY(-30%);
     -webkit-align-items: center;
 }
 .cid-rytu9NweJT .mbr-overlay {
@@ -2644,7 +2665,14 @@ body {
 @media (max-width: 576px) {
     .cid-rytu9NweJT .carousel-item .container {
         width: 100%;
-        /*height: 400px;*/
+        height: 200px;
+    }
+    .cid-rytu9NweJT .carousel-caption {
+      top: 25%;
+    
+    -webkit-transform: translateY(-30%);
+    transform: translateY(-30%);
+    -webkit-align-items: center;
     }
 }
 .cid-rytu9NweJT .carousel-item-next.carousel-item-left,
@@ -2726,6 +2754,14 @@ body {
     .cid-rytu9NweJT .mbr-slider .carousel-indicators {
         display: none !important;
     }
+
+    .cid-rytu9NweJT H2 {
+      font-size: 7vw;
+    }
+
+    .cid-rytu9NweJT P {
+      font-size: 5vw;
+    }
 }
 .cid-rytu9NweJT .mbr-slider > .container img {
     width: 100%;
@@ -2803,6 +2839,7 @@ body {
 .cid-rytu9NweJT H2 {
     text-align: center;
     color: #816c96;
+
 }
 .cid-rytu9NweJT H3 {
     text-align: center;
