--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -100,7 +100,7 @@ section .mbr-background-video-preview {
 
 /*! Base colors */
 .mbr-white {
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .mbr-black {
